Remove Download.DatabaseInvalidState histogram.

Remove Download.DatabaseInvalidState, it's not used and not in
histograms.xml.

Bug: 642288
Change-Id: I586701a9e20f10e483bb4b3b524eefafed5ea0c2
Reviewed-on: https://chromium-review.googlesource.com/963692
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543406}
Former-commit-id: 4ea99e0a120b83bbb82046661605faa42ae1f381